# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test-lint.yml
gendiff/: generate_diff.py
gendiff/formats/: choose_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: nested_result_json.txt
gendiff/utils/: parsing.py  read_file.py
tests/: test_generate_diff.py  test_utils.py
tests/fixtures/: nested_file2.yaml  nested_result_json.txt  nested_result_plain.txt  nested_result_stylish.txt
